<resources>
    <string name="app_name">Macro Talk for Android</string>
    <string name="title_profile_list">档案列表</string>
    <string name="title_conversation_list">对话列表</string>
    <string name="title_online">在线平台</string>
    <string name="title_settings">软件设置</string>
    <string name="prefab_profile_tab">预制档案</string>
    <string name="custom_profile_tab">自定义档案</string>
    <string name="custom_profile_empty">暂无档案\n可点击右下角按钮创建</string>
    <string name="add_profile_name">在此输入姓名（必填）</string>
    <string name="add_profile_firstname">在此输入姓</string>
    <string name="add_profile_avators">头像（至少上传一张)</string>
    <string name="add_profile_age">在此输入年龄</string>
    <string name="add_profile_height">在此输入身高</string>
    <string name="add_profile_school">在此输入学校</string>
    <string name="add_profile_birthday_clear">清除</string>
    <string name="add_profile_birthday_select">选择</string>
    <string name="add_profile_birthday_unselected">未选择</string>
    <string name="add_profile_hobbies">在此输入兴趣（%1$s分隔）</string>
    <string name="add_profile_momotalkstate">在此输入Momotalk状态</string>
    <string name="add_profile_description">在此输入简介</string>
    <string name="add_conversation_cover">档案封面</string>
    <string name="add_conversation_profile">档案选择</string>
    <string name="add_conversation_profile_hint">在这里搜索档案</string>
    <string name="add_conversation_profile_reset">重置</string>
    <string name="add_conversation_title">在此输入标题</string>
    <string name="add_tags">在此输入标签（%1$s分隔）</string>
    <string name="add_cancel">取消</string>
    <string name="add_confirm">确认</string>
    <string name="profile_title">学生档案</string>
    <string name="profile_uppertitle">基本信息</string>
    <string name="profile_downertitle">学生介绍</string>
    <string name="profile_name">姓名：%1$s</string>
    <string name="profile_age">年龄：%1$s岁</string>
    <string name="profile_height">身高：%1$scm</string>
    <string name="profile_school">所属学校：%1$s</string>
    <string name="profile_birthday">生日：%1$s月%2$s日</string>
    <string name="profile_hobbies">兴趣：%1$s</string>
    <string name="conversation_empty">暂无对话\n可点击右下角按钮创建</string>
    <string name="knot">羁绊剧情</string>
    <string name="knot_content">前往%1$s的羁绊剧情</string>
    <string name="extra_knot">羁绊剧情</string>
    <string name="extra_reply">发送回复</string>
    <string name="extra_reply_hint">在此输入回复</string>
    <string name="extra_image">发送图片</string>
    <string name="extra_overwrite">覆写信息</string>
    <string name="extra_overwrite_avator">覆写头像</string>
    <string name="extra_overwrite_name">覆写姓名</string>
    <string name="send">发送</string>
    <string name="reply">回复</string>
    <string name="start_conversation">开始对话</string>
    <string name="export_marginTop">页边距（顶）</string>
    <string name="export_marginLeft">页边距（左）</string>
    <string name="export_marginRight">页边距（右）</string>
    <string name="export_marginBottom">页边距（底）</string>
    <string name="export_not_cut">不切割</string>
    <string name="export_cut">切割</string>
    <string name="export_margin">页边距（左、上、右、下）</string>
    <string name="export_cutmode">图片切割模式</string>
    <string name="export_cuthint">点击图片选择当前截止对话</string>
    <string name="export_preview">导出预览（点击确定则导出至相册）</string>
    <string name="setting_char">默认分割符号</string>
    <string name="setting_bg">对话背景颜色</string>
    <string name="setting_collapse">自动缩进对话</string>
    <string name="setting_collapse_count">自动缩进对话长度</string>
    <string name="hint_login_or_register">登录/注册</string>
    <string name="hint_login_on_start">下次打开时自动登录</string>
    <string name="hint_register_id">用户ID:</string>
    <string name="hint_no_password">*密码自动生成</string>
    <string name="hint_id_registered">ID已注册！</string>
</resources>