<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile_list">

    <fragment
        android:id="@+id/navigation_profile_list"
        android:name="com.Macro.macrotalkforandroid.ui.profilelist.ProfileListFragment"
        android:label="@string/title_profile_list"
        tools:layout="@layout/fragment_profile_list" />

    <fragment
        android:id="@+id/navigation_conversation_list"
        android:name="com.Macro.macrotalkforandroid.ui.conversationlist.ConversationListFragment"
        android:label="@string/title_conversation_list"
        tools:layout="@layout/fragment_conversation_list" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.Macro.macrotalkforandroid.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>