<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_char"
        android:textAppearance="@style/default_text_title"
        android:layout_margin="20dp"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/setting_char"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:ems="1"
        android:maxLength="1"
        android:text=","/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_collapse"
        android:textAppearance="@style/default_text_title"
        android:layout_margin="20dp"
        android:textSize="28sp"/>

    <Switch
        android:id="@+id/setting_collapse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_collapse_count"
        android:textAppearance="@style/default_text_title"
        android:layout_margin="20dp"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/setting_collapse_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:inputType="number"
        android:text="5"/>

</LinearLayout>