<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="120dp"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/overwrite_avator"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_addimage"
            app:tint="@color/lightgray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/extra_overwrite_avator"
            android:gravity="center"
            android:textAppearance="@style/default_text"
            android:textSize="15sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/overwrite_avator_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:text="@string/add_conversation_profile_reset"
        android:textAppearance="@style/default_text"
        android:textColor="@color/momotalk_darkcyan"
        android:textSize="20sp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/overwrite_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:inputType="text"
            android:lines="1"
            android:ems="10"
            android:textAppearance="@style/default_text_dark"
            android:theme="@style/input_underline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/extra_overwrite_name"
            android:gravity="center"
            android:textAppearance="@style/default_text"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>